--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,5 +6,9 @@ branches:
   - master
 image: Visual Studio 2017
 configuration: Release
-build:
-  verbosity: minimal
+build_script:
+- ps: ./build.ps1
+test: off
+artifacts:
+- path: .\artifacts\**\*.nupkg
+  name: NuGet
